// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CircleSkeleton /> should render a circle skeleton 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 50%;
  line-height: 1rem;
  height: 72px;
  width: 72px;
}

<CircleSkeleton
  showSkeleton={true}
  size="large"
>
  <Styled(styled.span)
    size="large"
  >
    <styled.span
      className="c0"
      size="large"
    >
      <span
        className="c0 c1"
        size="large"
      />
    </styled.span>
  </Styled(styled.span)>
</CircleSkeleton>
`;

exports[`<CircleSkeleton /> should render a circle skeleton with set size 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 50%;
  line-height: 1rem;
  height: 30px;
  width: 30px;
}

<CircleSkeleton
  showSkeleton={true}
  size="small"
>
  <Styled(styled.span)
    size="small"
  >
    <styled.span
      className="c0"
      size="small"
    >
      <span
        className="c0 c1"
        size="small"
      />
    </styled.span>
  </Styled(styled.span)>
</CircleSkeleton>
`;
